<resources>
    <string name="app_name">Laus invaders</string>

    <!--Game-->
    <string name="lives">Lives: </string>
    <string name="score">Score: 0</string>
    <string name="tap">Tap to start!</string>
    <string name="game_info">Shoot moving meteors\nMove the ship by tilting</string>

    <!--Game Options-->
    <string name="game_option">Game options</string>
    <string name="live">LIVES</string>
    <string name="lives_1">1 life</string>
    <string name="lives_3">3 lives</string>
    <string name="lives_5">5 lives</string>
    <string name="points">POINTS</string>
    <string name="points_1">1 point</string>
    <string name="points_5">5 points</string>
    <string name="points_10">10 points</string>
    <string name="speed">SPEED</string>
    <string name="speed_slow">slow</string>
    <string name="speed_medium">medium</string>
    <string name="speed_fast">fast</string>
    <string name="apply_button">APPLY</string>

    <!--Main-->
    <string name="highscore">Highscore: 0</string>
    <string name="play_button">PLAY</string>
    <string name="top_list_button">TOP LIST</string>
    <string name="game_option_button">GAME OPTIONS</string>

    <!--Settings-->
    <string name="settings">Settings</string>
    <string name="background">Set background</string>
    <string name="reset_button">RESET</string>
    <string name="reset">Reset top list</string>

    <!--Top List-->
    <string name="top_5">TOP 5</string>
    <string name="name"></string>
    <string name="list_score">0</string>
    <string name="place_1">1:</string>
    <string name="place_2">2:</string>
    <string name="place_3">3:</string>
    <string name="place_4">4:</string>
    <string name="place_5">5:</string>

</resources>