<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_2"
    android:id="@+id/main">

    <LinearLayout
        android:id="@+id/menu_buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/live"
            android:layout_gravity="start"
            android:textColor="@color/white"
            android:textSize="25sp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:orientation="vertical"
            android:gravity="center"
            android:background="@drawable/settings_box"
            android:layout_marginBottom="40dp">


            <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/health_group"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center">

                <RadioButton android:id="@+id/health_1"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/lives_1"
                    android:gravity="center_horizontal|bottom"
                    android:button="@null"
                    android:drawableBottom="?android:attr/listChoiceIndicatorSingle" />

                <RadioButton android:id="@+id/health_2"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/lives_3"
                    android:checked="true"
                    android:layout_marginStart="80dp"
                    android:layout_marginEnd="80dp"
                    android:gravity="center_horizontal|bottom"
                    android:button="@null"
                    android:drawableBottom="?android:attr/listChoiceIndicatorSingle" />

                <RadioButton android:id="@+id/health_3"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/lives_5"
                    android:gravity="center_horizontal|bottom"
                    android:button="@null"
                    android:drawableBottom="?android:attr/listChoiceIndicatorSingle" />
            </RadioGroup>
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/points"
            android:layout_gravity="start"
            android:textColor="@color/white"
            android:textSize="25sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:orientation="vertical"
            android:gravity="center"
            android:background="@drawable/settings_box"
            android:layout_marginBottom="40dp">

            <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/points_group"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center">

                <RadioButton android:id="@+id/points_1"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/points_1"
                    android:gravity="center_horizontal|bottom"
                    android:button="@null"
                    android:drawableBottom="?android:attr/listChoiceIndicatorSingle"/>

                <RadioButton android:id="@+id/points_2"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/points_5"
                    android:checked="true"
                    android:layout_marginStart="80dp"
                    android:layout_marginEnd="80dp"
                    android:gravity="center_horizontal|bottom"
                    android:button="@null"
                    android:drawableBottom="?android:attr/listChoiceIndicatorSingle"/>

                <RadioButton android:id="@+id/points_3"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/points_10"
                    android:gravity="center_horizontal|bottom"
                    android:button="@null"
                    android:drawableBottom="?android:attr/listChoiceIndicatorSingle"/>
            </RadioGroup>
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/speed"
            android:layout_gravity="start"
            android:textColor="@color/white"
            android:textSize="25sp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:orientation="vertical"
            android:gravity="center"
            android:background="@drawable/settings_box"
            android:layout_marginBottom="40dp">

            <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/speed_group"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center">

                <RadioButton android:id="@+id/speed_1"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/speed_slow"
                    android:checked="true"
                    android:gravity="center_horizontal|bottom"
                    android:button="@null"
                    android:drawableBottom="?android:attr/listChoiceIndicatorSingle"/>

                <RadioButton android:id="@+id/speed_2"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="80dp"
                    android:layout_marginEnd="80dp"
                    android:text="@string/speed_medium"
                    android:gravity="center_horizontal|bottom"
                    android:button="@null"
                    android:drawableBottom="?android:attr/listChoiceIndicatorSingle"/>

                <RadioButton android:id="@+id/speed_3"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/speed_fast"
                    android:gravity="center_horizontal|bottom"
                    android:button="@null"
                    android:drawableBottom="?android:attr/listChoiceIndicatorSingle"/>
            </RadioGroup>
        </LinearLayout>

        <Button
            android:id="@+id/settings_button"
            android:layout_width="180dp"
            android:layout_height="70dp"
            android:text="@string/apply_button"
            android:textSize="20sp"
            android:textStyle="bold"
            app:cornerRadius="15dp"
            android:layout_marginTop="20dp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>