<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_2"
    android:id="@+id/main">

    <TextView
        android:id="@+id/menu_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/top_5"
        android:textSize="40sp"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/table"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.1" />

    <TableLayout
        android:id="@+id/table"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/settings_box"
        android:backgroundTint="@color/blue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/menu_title">

        <TableRow
            android:padding="14dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/place_1"
                android:textSize="30sp"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/name_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:textSize="30sp"
                android:textColor="@color/white"
                android:layout_weight="1"
                android:layout_marginStart="10dp"/>

            <TextView
                android:id="@+id/score_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/list_score"
                android:textSize="30sp"
                android:textColor="@color/white"
                android:layout_gravity="right"
                android:layout_marginEnd="10dp"/>
        </TableRow>

        <TableRow
            android:background="@color/white"
            android:padding="14dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/place_2"
                android:textSize="30sp"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/name_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:textSize="30sp"
                android:textColor="@color/black"
                android:layout_weight="1"
                android:layout_marginStart="10dp"/>

            <TextView
                android:id="@+id/score_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/list_score"
                android:textColor="@color/black"
                android:textSize="30sp"
                android:layout_gravity="right"
                android:layout_marginEnd="10dp"/>
        </TableRow>

        <TableRow
            android:padding="14dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/place_3"
                android:textSize="30sp"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/name_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:textSize="30sp"
                android:textColor="@color/white"
                android:layout_weight="1"
                android:layout_marginStart="10dp"/>

            <TextView
                android:id="@+id/score_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/list_score"
                android:textSize="30sp"
                android:textColor="@color/white"
                android:layout_gravity="right"
                android:layout_marginEnd="10dp"/>
        </TableRow>

        <TableRow
            android:background="@color/white"
            android:padding="14dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/place_4"
                android:textSize="30sp"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/name_4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:textSize="30sp"
                android:textColor="@color/black"
                android:layout_weight="1"
                android:layout_marginStart="10dp"/>

            <TextView
                android:id="@+id/score_4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/list_score"
                android:textSize="30sp"
                android:textColor="@color/black"
                android:layout_gravity="right"
                android:layout_marginEnd="10dp"/>

        </TableRow>

        <TableRow
            android:padding="14dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/place_5"
                android:textSize="30sp"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/name_5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:textSize="30sp"
                android:textColor="@color/white"
                android:layout_weight="1"
                android:layout_marginStart="10dp"/>

            <TextView
                android:id="@+id/score_5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/list_score"
                android:textSize="30sp"
                android:textColor="@color/white"
                android:layout_gravity="right"
                android:layout_marginEnd="10dp"/>
        </TableRow>

    </TableLayout>

</androidx.constraintlayout.widget.ConstraintLayout>